--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -34,12 +34,11 @@
             <ImageButton
                 android:id="@+id/btnBack"
                 style="@style/NavButton"
-                android:contentDescription="@null"
+                android:contentDescription="@string/back"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_back"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+                app:srcCompat="@drawable/ic_back" />
 
             <ImageButton
                 android:id="@+id/btnShare"
@@ -66,7 +65,6 @@
                 app:layout_constraintEnd_toStartOf="@+id/btnShare"
                 app:layout_constraintTop_toTopOf="@+id/btnShare" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.appcompat.widget.Toolbar>
 
     <de.hdodenhof.circleimageview.CircleImageView
