--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -17,6 +17,16 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
+        <action
+            android:id="@+id/action_nav_home_to_favoriteFragment"
+            app:destination="@id/nav_favorite"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
+        <action
+            android:id="@+id/action_nav_home_to_settingsActivity"
+            app:destination="@id/settingsActivity" />
     </fragment>
     <fragment
         android:id="@+id/nav_detail"
@@ -24,7 +34,7 @@
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail">
         <action
-            android:id="@+id/action_nav_detail_to_nav_home3"
+            android:id="@+id/action_nav_detail_to_nav_home"
             app:destination="@id/nav_home"
             app:enterAnim="@anim/from_left"
             app:exitAnim="@anim/to_right" />
@@ -32,4 +42,30 @@
             android:name="user"
             app:argType="com.dicoding.bfaa.submission.model.User" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_favorite"
+        android:name="com.dicoding.bfaa.submission.ui.favorite.FavoriteFragment"
+        android:label="favorite_fragment"
+        tools:layout="@layout/fragment_favorite">
+        <argument
+            android:name="user"
+            app:argType="com.dicoding.bfaa.submission.model.User" />
+        <action
+            android:id="@+id/action_favoriteFragment_to_nav_home"
+            app:destination="@id/nav_home"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right" />
+        <action
+            android:id="@+id/action_nav_favorite_to_nav_detail"
+            app:destination="@id/nav_detail"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
+    </fragment>
+    <activity
+        android:id="@+id/settingsActivity"
+        android:name="com.dicoding.bfaa.submission.ui.settings.SettingsActivity"
+        android:label="activity_settings"
+        tools:layout="@layout/activity_settings" />
 </navigation>
